--- a/app/globals.css
+++ b/app/globals.css
@@ -120,3 +120,14 @@
     @apply bg-background text-foreground;
   }
 }
+
+.hover-transform:hover .transform-y-custom {
+  transform: translateY(calc(-100% + 8rem));
+}
+
+.text-wrap-2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
